[package]
name = "dev-scope"
version = "2026.1.6"
edition = "2024"
default-run = "scope"
repository = "https://github.com/oscope-dev/scope"
homepage = "https://oscope-dev.github.io/scope/"
license = "BSD-3-Clause"
keywords = ["local-dev"]
categories = ["command-line-utilities", "development-tools::debugging", "development-tools::build-utils"]
description = "A tool to help diagnose errors, setup machines, and report bugs to authors."
documentation = "https://oscope-dev.github.io/scope/"
readme = "README.md"
publish = true

[package.metadata.dist]
dist = true

[package.metadata.release]
tag-prefix = ""

[[bin]]
name = "scope"

[[bin]]
name = "scope-intercept"

[dependencies]
clap = { version = "4.5.54", features = ["derive", "env"]}
human-panic = "2.0.6"
tokio = { version = "1", features = ["full"] }
colored = "3.0.0"
which = { version = "8.0", features = ["regex"] }
regex = "1.12.2"
lazy_static = "1.5.0"
inquire = {  version = "0.9", features = ["editor"]}
tracing-subscriber = { version = "0.3", features = ["time", "json", "local-time" ] }
tracing-appender = "0.2.4"
chrono = "0.4"
nanoid = "0.4"
directories = "6"
derivative = "2"
reqwest = { version = "0.12", features = ["multipart", "rustls-tls", "native-tls-vendored" ] }
time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }
json = "0.12"
minijinja = { version = "2.14.0", features = ["loader"] }
itertools = { version = "0.14", features = [] }
path-clean = "1.0.1"
async-trait = "0.1.89"
mockall = "0.14.0"
pathdiff = "0.2.3"
glob = "0.3"
educe = "0.6.0"
petgraph = "0.8.3"
sha256 = "1.6.0"
anyhow = "1.0.100"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
schemars = "1.2"
derive_builder = "0.20"
strum = { version = "0.27", features = ["derive"] }
jsonschema = "0.33"
tracing = "0.1.44"
ignore = "0.4.25"
tracing-indicatif = "0.3.13"
indicatif = "0.18"
strip-ansi-escapes = "0.2.1"
octocrab = "0.40.0"
jsonwebtoken = "10.2.0"
secrecy = "0.10.3"
url = "2.5.2"
dotenvy = "0.15.7"
opentelemetry = { version = "0.31.0", features = ["metrics"] }
opentelemetry-otlp = { version = "0.31.0", features = ["metrics", "reqwest", "http-proto", "reqwest-client", "reqwest-rustls"] }
tracing-opentelemetry = "0.32.0"
opentelemetry_sdk = { version = "0.31.0", features = ["metrics", "rt-tokio"] }
tonic = "0.14.2"
gethostname = "1.1.0"
normpath = "1.5.0"
fake = "4.4.0"
shellexpand = "3.1.1"

[dev-dependencies]
assert_cmd = "2.1.2"
assert_fs = "1.1.3"
escargot = "0.5.15"
predicates = "3.1.3"
tempfile = "3.24"

[build-dependencies]
vergen = { version = "8.3", features = ["build", "git", "git2"] }
anyhow = "1.0.100"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
