[package]
name = "dev-scope"
version = "2026.1.9"
edition = "2024"
default-run = "scope"
repository = "https://github.com/oscope-dev/scope"
homepage = "https://oscope-dev.github.io/scope/"
license = "BSD-3-Clause"
keywords = ["local-dev"]
categories = ["command-line-utilities", "development-tools::debugging", "development-tools::build-utils"]
description = "A tool to help diagnose errors, setup machines, and report bugs to authors."
documentation = "https://oscope-dev.github.io/scope/"
readme = "README.md"
publish = true

[package.metadata.dist]
dist = true

[package.metadata.release]
tag-prefix = ""

[[bin]]
name = "scope"

[[bin]]
name = "scope-intercept"

[dependencies]
anyhow = "1.0.90"
async-trait = "0.1.83"
chrono = "0.4"
clap = { version = "4.5.8", features = ["derive", "env"]}
colored = "2.1.0"
derivative = "2"
derive_builder = "0.20"
directories = "5"
dotenvy = "0.15.7"
educe = "0.5.11"
fake = "2.10.0"
gethostname = "0.4.3"
glob = "0.3"
human-panic = "2.0.2"
ignore = "0.4.23"
indicatif = "0.17"
inquire = {  version = "0.6", features = ["editor"]}
itertools = { version = "0.13", features = [] }
json = "0.12"
jsonschema = "0.30"
jsonwebtoken = "*"
lazy_static = "1.5.0"
minijinja = { version = "2.3.1", features = ["loader"] }
mockall = "0.12.1"
nanoid = "0.4"
normpath = "1.3.0"
octocrab = "*"
opentelemetry = { version = "0.27.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.27.0", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27.0", features = ["metrics", "reqwest", "http-proto", "reqwest-client", "reqwest-rustls"] }
path-clean = "1.0.1"
pathdiff = "0.2.2"
petgraph = "0.6.5"
regex = "1.11.0"
reqwest = { version = "0.12", features = ["multipart", "rustls-tls", "native-tls-vendored" ] }
schemars = "0.8"
secrecy = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha256 = "1.5.0"
shellexpand = "3.1.0"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0.64"
time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.12.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-indicatif = "0.3.9"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = { version = "*", features = ["time", "json", "local-time" ] }
url = "2.5.2"
which = { version = "6.0", features = ["regex"] }

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
escargot = "0.5.12"
predicates = "3.1.2"
tempfile = "3.0"

[build-dependencies]
anyhow = "1.0.90"
vergen = { version = "8.3", features = ["build", "git", "git2"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
