[package]
name = "dev-scope"
version = "0.0.0-dev"
edition = "2024"
default-run = "scope"
repository = "https://github.com/oscope-dev/scope"
homepage = "https://oscope-dev.github.io/scope/"
license = "BSD-3-Clause"
keywords = ["local-dev"]
categories = ["command-line-utilities", "development-tools::debugging", "development-tools::build-utils"]
description = "A tool to help diagnose errors, setup machines, and report bugs to authors."
documentation = "https://oscope-dev.github.io/scope/"
readme = "README.md"
publish = true

[[bin]]
name = "scope"

[[bin]]
name = "scope-intercept"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = "0.4"
clap = { version = "4.5.55", features = ["derive", "env"]}
colored = "3.1.1"
derivative = "2"
derive_builder = "0.20"
directories = "6"
dotenvy = "0.15.7"
educe = "0.6.0"
fake = "4.4.0"
gethostname = "1.1.0"
glob = "0.3"
human-panic = "2.0.6"
ignore = "0.4.25"
indicatif = "*"
inquire = {  version = "0.9", features = ["editor"]}
itertools = { version = "0.14", features = [] }
json = "0.12"
jsonschema = "0.33"
jsonwebtoken = "*"
lazy_static = "1.5.0"
minijinja = { version = "2.15.1", features = ["loader"] }
mockall = "0.14.0"
nanoid = "0.4"
normpath = "1.5.0"
octocrab = "*"
opentelemetry = { version = "*", features = ["metrics"] }
opentelemetry_sdk = { version = "*", features = ["metrics", "rt-tokio", "experimental_metrics_periodicreader_with_async_runtime"] }
opentelemetry-otlp = { version = "*", features = ["metrics", "reqwest", "http-proto", "reqwest-client", "reqwest-rustls", "grpc-tonic"] }
path-clean = "1.0.1"
pathdiff = "0.2.3"
petgraph = "0.8.3"
regex = "1.12.2"
reqwest = { version = "0.12", features = ["multipart", "rustls-tls", "native-tls-vendored" ] }
schemars = "*"
secrecy = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha256 = "1.6.0"
shellexpand = "3.1.1"
strip-ansi-escapes = "0.2.1"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0.12"
time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }
tokio = { version = "1", features = ["full"] }
tonic = "*"
tracing = "0.1.40"
tracing-appender = "0.2.4"
tracing-indicatif = "*"
tracing-opentelemetry = "*"
tracing-subscriber = { version = "*", features = ["time", "json", "local-time" ] }
url = "2.5.2"
which = { version = "8.0", features = ["regex"] }

[dev-dependencies]
assert_cmd = "2.1.2"
assert_fs = "1.1.3"
escargot = "0.5.15"
predicates = "3.1.3"
tempfile = "3.24"

[build-dependencies]
anyhow = "1.0.100"
vergen = { version = "8.3", features = ["build", "git", "git2"] }
