[package]
name = "pity-doctor"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "3.1.12", features = ["derive", "env"]}
human-panic = "1.0.3"
anyhow = "1.0.57"
thiserror = "1.0.30"
directories = "4.0.1"
tracing = "0.1.34"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.53"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tempfile = "3.3.0"
colored = "2.0.0"