[package]
name = "pity-doctor"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.4", features = ["derive", "env"]}
human-panic = "1.0"
anyhow = "1.0"
thiserror = "1.0"
directories = "5.0"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tempfile = "3"
colored = "2.1.0"
pity-lib = { path = "../pity-lib" }

[dev-dependencies]
tempfile = "*"