[package]
name = "pity-lib"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.4.11", features = ["derive", "env"]}
human-panic = "1.0.3"
anyhow = "1.0.57"
thiserror = "1.0.30"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3", features = ["json", "local-time" ] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
tracing-appender = "0.2.2"
chrono = "0.4"
nanoid = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
directories = "5"
log = "0.4.16"
regex = "1"
derivative = "2"