[package]
name = "pity"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "3.1.12", features = ["derive", "env"]}
human-panic = "1.0.3"
anyhow = "1.0.57"
thiserror = "1.0.30"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3", features = ["json", "local-time" ] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
tracing-appender = "0.2.2"
pity-doctor = { path = "../pity-doctor" }