[package]
name = "scope-doctor"
version = "2024.2.3"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.4", features = ["derive", "env"]}
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
colored = "2.1.0"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.5.0"
tokio = { version = "1", features = ["full"] }
mockall = "0.12.1"
educe = "0.5.11"
derive_builder = "0.13.0"
petgraph = "0.6.4"

scope-lib = { path = "../scope-lib" }

[dev-dependencies]
tempfile = "*"
