[package]
name = "scope-intercept"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"]}
human-panic = "1.2"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
inquire = {  version = "0.6", features = ["editor"]}

scope-lib = { path = "../scope-lib" }

[build-dependencies]
anyhow = "1.0.57"
