[package]
name = "scope-lib"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.4", features = ["derive", "env"]}
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time", "json", "local-time" ] }
tokio = { version = "1", features = ["full"] }
tracing-appender = "0.2.2"
chrono = "0.4"
nanoid = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
directories = "5"
regex = "1"
derivative = "2"
reqwest = { version = "0.11", features = ["multipart", "rustls"], default-features = false }
time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }
json = "0.12"
which = "5.0"
colored = "2.1"
minijinja = "1.0"
strum = { version = "0.25", features = ["derive"] }
itertools = { version = "0.12", features = [] }