[package]
name = "dev-scope-model"
version = "2024.2.6"
edition = "2021"

[package.metadata.dist]
dist = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = {workspace = true}
serde_yaml = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
derive_builder = { workspace = true }
strum = {workspace = true}
jsonschema = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]