[package]
name = "scope-report"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.4.11", features = ["derive", "env"]}
human-panic = "1.0.3"
anyhow = "1.0.57"
thiserror = "1.0.30"
directories = "5.0.1"
tracing = "0.1.34"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.53"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.27"
tempfile = "3.3.0"
colored = "2.0.0"
sysinfo = { version = "0.29"}
tokio-util = "0.7"
futures = "0.3.29"
chrono = "0.4"
ptree = "0.4.0"
nanoid = "0.4.0"
scope-lib = { path = "../scope-lib" }