[package]
name = "scope"
version = "2024.2.3"
edition = "2021"
default-run = "scope"
repository =  "https://github.com/ethankhall/scope"

# Example of customizing binaries in Cargo.toml.
[[bin]]
name = "scope"

[[bin]]
name = "scope-intercept"

[dependencies]
clap = { version = "4.4.11", features = ["derive", "env"]}
human-panic = "1.0.3"
anyhow = "1.0.57"
thiserror = "1.0.30"
tracing = "0.1.34"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
scope-doctor = { path = "../scope-doctor" }
scope-report = { path = "../scope-report" }
scope-analyze = { path = "../scope-analyze" }
scope-lib = { path = "../scope-lib" }
colored = "2.0.0"
which = { version = "5.0", features = ["regex"] }
regex = "1.9.6"
lazy_static = "1.4.0"
inquire = {  version = "0.6", features = ["editor"]}

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.1.0"
escargot = "0.5.8"
predicates = "3.0.4"

[build-dependencies]
vergen = { version = "8.3", features = ["build", "git", "git2"] }
anyhow = "1.0.57"
