[package]
name = "dev-scope"
version = "2024.2.23"
edition = "2021"
default-run = "scope"
repository =  "https://github.com/ethankhall/scope"
license = "BSD-3-Clause"
keywords = ["local-dev"]
categories = ["command-line-utilities", "development-tools::debugging", "development-tools::build-utils"]
description = "A tool to help diagnose errors, setup machines, and report bugs to authors."
documentation = "https://ethankhall.github.io/scope/"
readme = "../README.md"
publish = true

[package.metadata.dist]
dist = true

[package.metadata.release]
tag-prefix = ""

# Example of customizing binaries in Cargo.toml.
[[bin]]
name = "scope"

[[bin]]
name = "scope-intercept"

[dependencies]
clap = { version = "4.5.2", features = ["derive", "env"]}
human-panic = "1.2.3"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
colored = "2.1.0"
which = { version = "5.0", features = ["regex"] }
regex = "1.9.6"
lazy_static = "1.4.0"
inquire = {  version = "0.6", features = ["editor"]}
tracing-subscriber = { version = "0.3", features = ["time", "json", "local-time" ] }
tracing-appender = "0.2.3"
chrono = "0.4"
nanoid = "0.4"
directories = "5"
derivative = "2"
reqwest = { version = "0.11", features = ["multipart", "rustls-tls", "hyper-tls", "native-tls-vendored" ] }
time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }
json = "0.12"
minijinja = "1.0"
itertools = { version = "0.12", features = [] }
path-clean = "1.0.1"
async-trait = "0.1.77"
mockall = "0.12.1"
pathdiff = "0.2.1"
glob = "0.3"
educe = "0.5.11"
petgraph = "0.6.4"
sha256 = "1.5.0"
anyhow = "1.0.81"
thiserror = "1.0.58"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
schemars = "0.8"
derive_builder = "0.20"
strum = { version = "0.26", features = ["derive"] }
jsonschema = "0.17"
tracing = "0.1.40"

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
escargot = "0.5.10"
predicates = "3.1.0"

[build-dependencies]
vergen = { version = "8.3", features = ["build", "git", "git2"] }
anyhow = "1.0.81"
