[package]
name = "dev-scope"
version = "2024.2.35"
edition = "2021"
default-run = "scope"
repository =  "https://github.com/oscope-dev/scope"
license = "BSD-3-Clause"
keywords = ["local-dev"]
categories = ["command-line-utilities", "development-tools::debugging", "development-tools::build-utils"]
description = "A tool to help diagnose errors, setup machines, and report bugs to authors."
documentation = "https://oscope-dev.github.io/scope/"
readme = "../README.md"
publish = true

[package.metadata.dist]
dist = true

[package.metadata.release]
tag-prefix = ""

# Example of customizing binaries in Cargo.toml.
[[bin]]
name = "scope"

[[bin]]
name = "scope-intercept"

[dependencies]
clap.workspace = true
human-panic.workspace = true
tokio.workspace = true
dotenv.workspace = true
colored.workspace = true
which.workspace = true
regex.workspace = true
lazy_static.workspace = true
inquire.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
chrono.workspace = true
nanoid.workspace = true
directories.workspace = true
derivative.workspace = true
reqwest.workspace = true
time.workspace = true
json.workspace = true
minijinja.workspace = true
itertools.workspace = true
path-clean.workspace = true
async-trait.workspace = true
mockall.workspace = true
pathdiff.workspace = true
glob.workspace = true
educe.workspace = true
petgraph.workspace = true
sha256.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
schemars.workspace = true
derive_builder.workspace = true
strum.workspace = true
jsonschema.workspace = true
tracing.workspace = true
ignore.workspace = true
tracing-indicatif.workspace = true
indicatif.workspace = true
strip-ansi-escapes.workspace = true

[dev-dependencies]
assert_cmd = "2.0.14"
assert_fs = "1.1.1"
escargot = "0.5.10"
predicates = "3.1.0"

[build-dependencies]
vergen = { version = "8.3", features = ["build", "git", "git2"] }
anyhow = "1.0.81"
